chore: 简化密码校验器，只保留plain和md5
